--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 export PYTHON_KEYRING_BACKEND="keyring.backends.null.Keyring"
-export PROJECT_NAME="course-template"
+export PROJECT_NAME="course-template-i18n"
 PROJECT_ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 export PROJECT_ROOT
 VIRTUAL_ENV="${WORKON_HOME}/${PROJECT_NAME}"
