--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
-name = "course-template"
-version = "0.1.0"
-description = "Streamlined course creation template with interactive documentation support"
+name = "course-template-i18n"
+version = "0.0.0"
+description = "Multilingual course creation template with interactive documentation support for international audiences"
 authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
 license = "CC-BY-4.0"
-homepage = "https://entelecheia.github.io/course-template"
-repository = "https://github.com/entelecheia/course-template"
+homepage = "https://entelecheia.github.io/course-template-i18n"
+repository = "https://github.com/entelecheia/course-template-i18n"
 readme = "README.md"
-packages = [{ include = "coursetemp", from = "src" }]
+packages = [{ include = "coursetempi", from = "src" }]
 
 [tool.poetry.scripts]
-coursetemp = 'coursetemp.__cli__:main'
+coursetempi = 'coursetempi.__cli__:main'
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
@@ -99,8 +99,7 @@ tag_format = "v$version"
 [tool.semantic_release]
 branch = "main"
 version_toml = "pyproject.toml:tool.poetry.version"
-version_pattern = '.docker/docker.version:IMAGE_VERSION="{version}"'
-version_variable = "src/coursetemp/_version.py:__version__"
+version_variable = "src/coursetempi/_version.py:__version__"
 version_source = "tag"
 commit_version_number = true # required for version_source = "tag"
 commit_subject = "chore(release): :rocket: {version} [skip ci]"
